[package]
name = "etcdmq"
description = "Lightweight Message Queue backed by etcd"
authors = ["Colum McGaley <rust@m1.volf.co>"]
edition = "2018"
license = "Apache-2.0"
version = "0.0.3"
keywords = ["etcd", "message-queue", "mq"]
categories = ["concurrency"]
homepage = "https://rust.volf.co/etcdmq"
repository = "https://github.com/volfco/etcdmq"
readme = "README.md"


[dependencies]
tokio = { version = "1.16", features = ["full"] }
etcd-client = "0.8"

anyhow = "1.0"
tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
tracing-subscriber = "0.2"
